--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,18 +9,23 @@
     </head>
     <body>
         <header class="page-header">
-            <div class="container">
-                <a href="{% url 'post_new' %}" class="top-menu">
-                    {% include './icons/file-earmark-plus.svg' %}
-                </a>
-                <h1><a href="/">Django Girls Blog</a></h1>
-            </div>
+          <div class="container">
+              <h1><a href="/">Django Girls Blog</a></h1>
+          </div>
         </header>
-        <main class="content container">
+
+        <main class="container">
             <div class="row">
                 <div class="col">
-                    {% block content %}
-                    {% endblock %}
+                {% for post in posts %}
+                    <article class="post">
+                        <time class="date">
+                            {{ post.published_date }}
+                        </time>
+                        <h2><a href="">{{ post.title }}</a></h2>
+                        <p>{{ post.text|linebreaksbr }}</p>
+                    </article>
+                {% endfor %}
                 </div>
             </div>
         </main>
