--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -5,6 +5,7 @@
         <aside class="actions">
             {% if user.is_authenticated %}
                 <a class="btn btn-secondary" href="{% url 'post_edit' pk=post.pk %}">
+                    <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
                     {% include './icons/pencil-fill.svg' %}
                 </a>
             {% endif %}
